Removing unneeded npm modules

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	
 	<body class="sans-serif debug debug-grid-16">
 		<div class="w-80 center mt4">
-			<h4>Answer Randomizer</h4>
+			<h1 class="f1 tc">Answer Randomizer</h1>
 			<div class="center" id="choices">
 				<div id="choices_list" class="container"></div>
 				<input class="center w-80 w-20-ns" id="new_choice" type="text"><br />
