--- a/index.html
+++ b/index.html
@@ -1,30 +1,42 @@
 <html>
 	<head>
 		<title>Answer Randomizer</title>
-		<link rel="stylesheet" type="text/css" href="./styles.css">
 		<link rel="stylesheet" type="text/css" href="./tachyons.min.css">
+		<style>
+			.choice_item {
+				margin-left: 5px;
+				background: #ddd;
+				width: 100px;
+				height: 100px;
+				font-weight: bold;
+				text-align: center;
+				line-height: 100px;
+				font-size: 2rem;
+				
+			}
+		</style>
 	</head>
 	
-	<body class="sans-serif debug debug-grid-16">
+	<body class="sans-serif">
 		<div class="w-80 center mt4">
-			<h1 class="f1 tc">Answer Randomizer</h1>
-			<div class="center" id="choices">
-				<div id="choices_list" class="container"></div>
-				<input class="center w-80 w-20-ns" id="new_choice" type="text"><br />
-				<button class="center" id="choices_button">Add a choice</button>
+			<h1 class="f-subheadline tc mb3">Answer Randomizer</h1>
+			<div class="center mb3" id="choices">
+				<div class="db flex flex-wrap items-center justify-center" id="choices_list"></div>
+				<input class="db center w-80 w-20-ns tc f2 mb2" id="new_choice" type="text">
+				<button class="db center f2" id="choices_button">Add a choice</button>
+			</div>
+			
+			<div class="db mv3">
+				<label class="db tc f1 mb2" for="n_questions">Number of Questions</label>
+				<input class="db center f1 tc" id="n_questions" type="number" min="1" step="1" value="1">
+			</div>
+			
+			<div class="db center mv3">
+				<label class="db tc f1 mb2" for="starting_q">Starting Question</label>
+				<input class="db center f1 tc" id="starting_q" type="number" min="1" step="1" value="1">
 			</div>
 
-			<br />
-			
-			<label for="n_questions">Number of questions: </label><br />
-			<input id="n_questions" type="number" min="1" step="1" value="1">
-			
-			<br />
-			
-			<label for="starting_q">Starting at: </label><br />
-			<input id="starting_q" type="number" min="1" step="1" value="1">
-			
-			<button id="generate">Generate randomized answers</button>
+			<button class="db center f2" id="generate">Generate randomized answers</button>
 			
 			<table id="answers_list"></table>
 		</div>
