Changes attempting to fix initial zoom in iOS Safari

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>Answer Randomizer</title>
+		<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 		<link rel="stylesheet" type="text/css" href="./tachyons.min.css">
 		<style>
 			.choice_item {
@@ -17,7 +18,7 @@
 		</style>
 	</head>
 	
-	<body class="sans-serif">
+	<body class="sans-serif w-100">
 		<div class="w-80 center mt4">
 			<h1 class="f-subheadline tc mb3">Answer Randomizer</h1>
 			<div class="center mb3" id="choices">
