--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 			.choice_item {
 				margin-left: 5px;
 				background: #ddd;
-				width: 100px;
-				height: 100px;
+				width: 4rem;
+				height: 4rem;
 				font-weight: bold;
 				text-align: center;
-				line-height: 100px;
-				font-size: 2rem;
+				line-height: 4rem;
+				font-size: 1rem;
 				
 			}
 		</style>
 	</head>
 	
-	<body class="sans-serif w-100 debug">
+	<body class="sans-serif w-100">
 		<div class="w-80 center mt2">
 			<h1 class="f1 f-subheadline-ns tc mb3">Answer Randomizer</h1>
 			<div class="center mb3" id="choices">
