--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 		<div class="w-80 center mt2">
 			<h1 class="f1 f-subheadline-ns tc mb3">Answer Randomizer</h1>
 			<div class="center mb3" id="choices">
-				<div class="dib flex flex-wrap items-center justify-center" id="choices_list"></div>
+				<div class="dib flex flex-wrap items-center justify-center mt0" id="choices_list"></div>
 				<input class="db center w-50 w-20-ns tc f3 f2-ns mb2 ba bw1 br2 pa2" id="new_choice" type="text">
-				<a class="db mb2 center tc f4 f3-ns link grow ba br-pill bw1 ph2 pv2 black w-80 w-20-ns" id="choices_button" href="#choices_button">Add a Choice</a>
+				<a class="db mv4 center tc f4 f3-ns link grow ba br-pill bw1 ph2 pv2 black w-80 w-20-ns" id="choices_button" href="#choices_button">Add a Choice</a>
 			</div>
 			
-			<div class="db center">
+			<div class="db mv3">
 				<label class="db tc f3 f2-ns mb2" for="n_questions">Number of Questions</label>
 				<input class="db center f3 f2-ns tc w-50 w-20-ns ba bw1 br2 pa2" id="n_questions" type="number" min="1" step="1" value="1" pattern="\d*" />
 			</div>
