Testing out white backgrounds for input boxes

--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
 			<h1 class="near-black f1 f-subheadline-ns tc mb3">Answer Randomizer</h1>
 			<div class="center mb3" id="choices">
 				<div class="dib flex flex-wrap items-center justify-center" id="choices_list"></div>
-				<input class="db near-black bg-washed-red b--near-black center w-50 w-20-ns tc f3 f2-ns mb3 mt2 bw1 br2 pa2" id="new_choice" type="text">
+				<input class="db near-black bg-near-white b--near-black center w-50 w-20-ns tc f3 f2-ns mb3 mt2 bw1 br2 pa2" id="new_choice" type="text">
 				<a class="purple db mb4 center tc f4 f3-ns link grow ba br-pill bw1 ph2 pv2 black w-80 w-20-ns" id="choices_button" href="#choices_button">Add a Choice</a>
 			</div>
 			
 			<div class="db mv3">
 				<label class="near-black db tc f3 f2-ns mb2" for="n_questions">Number of Questions</label>
-				<input class="near-black bg-washed-red db center f3 f2-ns tc w-50 w-20-ns bw1 br2 pa2 b--near-black" id="n_questions" type="number" min="1" step="1" value="1" pattern="\d*" />
+				<input class="near-black bg-near-white db center f3 f2-ns tc w-50 w-20-ns bw1 br2 pa2 b--near-black" id="n_questions" type="number" min="1" step="1" value="1" pattern="\d*" />
 			</div>
 			
 			<div class="db center mv3">
 				<label class="near-black db tc f3 f2-ns mb2" for="starting_q">Starting Question</label>
-				<input class="near-black bg-washed-red b--near-black db center f3 f2-ns tc w-50 w-20-ns bw1 br2 pa2" id="starting_q" type="number" min="1" step="1" value="1" pattern="\d*" />
+				<input class="near-black bg-near-white b--near-black db center f3 f2-ns tc w-50 w-20-ns bw1 br2 pa2" id="starting_q" type="number" min="1" step="1" value="1" pattern="\d*" />
 			</div>
 
 			<a class="purple db mv4 center tc f4 f3-ns link grow ba br-pill bw1 ph2 pv2 black w-80 w-30-ns" id="generate" href="#results">Generate Answers</a>
