--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 			</div>
 		</div>
 	</body>
+	<script type="text/javascript" src="./d3.min.js"></script>
 	<script type="text/javascript">
 		var choices = [];
 		
