Set bars to fill available space

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<div class="w-100 w-50-ns center flex" id="chart">
 					<!--<span>A <div class="dib ml2 w-10 .h2 purple bg-purple">|</div></span>-->
 					<div id="labels" class="f4"></div>
-					<div id="bars" class=""></div>
+					<div id="bars" style="flex-grow: 2;"></div>
 				</div>
 				<table class="f4 w-100 w-50-ns center" cellspacing="0">
 					<thead id="tableheader">
