Adding scroll target after generate

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 				<label class="near-black db tc f3 f2-ns mb2" for="starting_q">Starting Question</label>
 				<input class="near-black bg-near-white b--near-black db center f3 f2-ns tc w-50 w-20-ns bw1 br2 pa2" id="starting_q" type="number" min="1" step="1" value="1" pattern="\d*" />
 			</div>
-
-			<a class="purple db mv4 center tc f4 f3-ns link grow ba br-pill bw1 ph2 pv2 black w-80 w-30-ns" id="generate" href="#">Generate Answers</a>
+			<div id="generate_scroll"></div>
+			<a class="purple db mv4 center tc f4 f3-ns link grow ba br-pill bw1 ph2 pv2 black w-80 w-30-ns" id="generate" href="#generate_scroll">Generate Answers</a>
 			
 			
 
