--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	
 	<body class="bg-washed-red sans-serif w-100">
 		<div class="w-80 center mt2">
-			<a class="no-underline" href="http://derekfeger.github.io/answer_randomizer"><h1 class="near-black f1 f-subheadline-ns tc mb3">Answer Randomizer</h1></a>
+			<h1 class="near-black f1 f-subheadline-ns tc mb3">Answer Randomizer</h1>
 			<div class="center mb3" id="choices">
 				<div class="dib flex flex-wrap items-center justify-center" id="choices_list"></div>
 				<input class="db near-black bg-near-white b--near-black center w-50 w-20-ns tc f3 f2-ns mb3 mt2 bw1 br2 pa2" id="new_choice" type="text">
