--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 			newChoiceInput.value = ''
 
 			//Scrolls Button Back Into View
-			choicesList.scrollIntoView();
+			//choicesList.scrollIntoView();
 		}
 		
 		//Generating Answers
